# IGVC

./: .env.example  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  requirements.txt
docs/: .gitignore  _quarto.yaml  index.qmd  references.bib  report.qmd  slides.qmd
docs/assets/: chico.scss
scripts/: dataset-meta.py  dataset-upload.py  resize.sh  video.sh
simulation/: simulation.blend
simulation/materials/: asphalt_01_4k.blend
src/: README.md  predict.ipynb  predict.py  train.ipynb  train.py  trainV2.ipynb
src/model/igvs-segmentation/: README.md  config.json
src/smp/: config.py  dataset.py  model.py  transform.py
src/unet/: config.py  dataset.py
