[project]
name = "model"
version = "0.1.0"
description = "ML Model for IGVC Obstacle Image Segmentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets[vision]>=3.5.1",
    "huggingface-hub>=0.30.2",
    "imutils>=0.5.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "opencv-contrib-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
