[project]
name = "model"
version = "0.1.0"
description = "ML Model for IGVC Obstacle Image Segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.6",
    "datasets[vision]>=3.5.1",
    "huggingface-hub>=0.30.2",
    "imutils>=0.5.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.1",
    "opencv-contrib-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "segmentation-models-pytorch>=0.5.0",
    "standard-imghdr",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
